Clearing response vs core data models
